# Shredder

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
src/: Makefile.am  Makefile.in  shredder.c  shredder.h
test/: Makefile.am  Makefile.in  cliques.c  create.c  example.c  read.c  stars.c
